--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "incorrect-inquiry",
+   "id": "local-literacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "compound-conservative",
+   "id": "junior-wagner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "liable-pointer",
+   "id": "governing-gilbert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "distributed-lease",
+   "id": "following-council",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "gorgeous-norfolk",
+   "id": "built-moses",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "intense-horror",
+   "id": "inner-documentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "acknowledged-polls",
+   "id": "mighty-kelly",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "resistant-disposition",
+   "id": "widespread-instrument",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "posted-essence",
+   "id": "concrete-rendering",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "pressing-dispute",
+   "id": "israeli-utilization",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "brown-mattress",
+   "id": "color-ensemble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "classical-surge",
+   "id": "dimensional-repeat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "intended-departure",
+   "id": "chubby-papua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "nasty-scottish",
+   "id": "miniature-crest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ancient-survey",
+   "id": "indian-screw",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "banner-transformation",
+   "id": "authentic-brisbane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "royal-device",
+   "id": "unique-upset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "nominated-cosmetic",
+   "id": "vocal-rates",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "compound-basis",
+   "id": "covered-saying",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "configured-storage",
+   "id": "indie-serve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "greek-worst",
+   "id": "raising-stone",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "informational-hindu",
+   "id": "demographic-archive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "emotional-canadian",
+   "id": "possible-knight",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "appointed-greek",
+   "id": "interested-bhutan",
    "metadata": {},
    "outputs": [
     {
@@ -382,8 +382,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "biological-kazakhstan",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def foo(a: int, b:int):\n",
+    "    return (a, b,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "effective-resolution",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(**{'a':1, 'b':3})"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "outside-strap",
+   "id": "stunning-premium",
    "metadata": {},
    "outputs": [],
    "source": []
