--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "local-literacy",
+   "id": "fixed-stadium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "junior-wagner",
+   "id": "enhanced-plymouth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "governing-gilbert",
+   "id": "missing-armenia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "following-council",
+   "id": "dirty-assurance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "built-moses",
+   "id": "valid-frost",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "inner-documentation",
+   "id": "active-midwest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "mighty-kelly",
+   "id": "african-clock",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "widespread-instrument",
+   "id": "about-tissue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "concrete-rendering",
+   "id": "historic-consciousness",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "israeli-utilization",
+   "id": "seven-choice",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "color-ensemble",
+   "id": "lined-gambling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dimensional-repeat",
+   "id": "suitable-young",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "chubby-papua",
+   "id": "empty-strategy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "miniature-crest",
+   "id": "seven-requirement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "indian-screw",
+   "id": "seeing-picking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "authentic-brisbane",
+   "id": "continuing-iraqi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "unique-upset",
+   "id": "electrical-hobby",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "vocal-rates",
+   "id": "acknowledged-configuration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "covered-saying",
+   "id": "comparative-coordinator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "indie-serve",
+   "id": "gorgeous-valley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "raising-stone",
+   "id": "incredible-moderator",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "demographic-archive",
+   "id": "lonely-lithuania",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,86 +336,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "possible-knight",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1],\n",
-       "       [2],\n",
-       "       [3]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "interested-bhutan",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1],\n",
-       "       [2],\n",
-       "       [3]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(a.tolist())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "biological-kazakhstan",
+   "id": "opposite-boost",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def foo(a: int, b:int):\n",
-    "    return (a, b,)"
+    "import pymongo\n",
+    "\n",
+    "def get_db():\n",
+    "    dbname = \"indexyz\"\n",
+    "    client = pymongo.MongoClient(f\"mongodb://127.0.0.1/{dbname}\")\n",
+    "    db = client.indexyz\n",
+    "    return db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "effective-resolution",
+   "execution_count": 41,
+   "id": "fabulous-dancing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = get_db()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "lyric-austin",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nss = db.namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "attractive-separation",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 3)"
+       "<pymongo.results.DeleteResult at 0x10534f040>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "foo(**{'a':1, 'b':3})"
+    "nss.delete_many({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "raising-robin",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bson.objectid import ObjectId"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "trying-candy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ns = nss.find_one({'_id': ObjectId('6021e3b2b3b4fb9616915638')})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "capable-paradise",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ns is None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stunning-premium",
+   "id": "wired-probe",
    "metadata": {},
    "outputs": [],
    "source": []
