--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fixed-stadium",
+   "id": "european-breeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "enhanced-plymouth",
+   "id": "italic-hampshire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "missing-armenia",
+   "id": "organized-affair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dirty-assurance",
+   "id": "accessible-packaging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "valid-frost",
+   "id": "dying-bishop",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "active-midwest",
+   "id": "pacific-greeting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "african-clock",
+   "id": "accessible-estate",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "about-tissue",
+   "id": "military-adrian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "historic-consciousness",
+   "id": "reduced-alaska",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "seven-choice",
+   "id": "mediterranean-monday",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "lined-gambling",
+   "id": "quantitative-vocabulary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "suitable-young",
+   "id": "jewish-bonus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "empty-strategy",
+   "id": "adolescent-mailing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "seven-requirement",
+   "id": "framed-pointer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "seeing-picking",
+   "id": "demonstrated-wrestling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "continuing-iraqi",
+   "id": "phantom-counter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "electrical-hobby",
+   "id": "charged-lighter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "acknowledged-configuration",
+   "id": "extended-evening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "comparative-coordinator",
+   "id": "twenty-stranger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "gorgeous-valley",
+   "id": "declared-occupation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "incredible-moderator",
+   "id": "bottom-citizen",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "lonely-lithuania",
+   "id": "promising-solomon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "opposite-boost",
+   "id": "arranged-independence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fabulous-dancing",
+   "id": "preceding-testimony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "lyric-austin",
+   "id": "rubber-oxford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "attractive-separation",
+   "id": "numeric-cancer",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "raising-robin",
+   "id": "organic-butterfly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "trying-candy",
+   "id": "cleared-resort",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "capable-paradise",
+   "id": "surgical-billy",
    "metadata": {},
    "outputs": [
     {
@@ -434,8 +434,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "id": "secret-improvement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A:\n",
+    "    a = None\n",
+    "    def __init__(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "other-japan",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = A()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "welsh-attribute",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "insured-diploma",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.a is None"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "wired-probe",
+   "id": "strategic-multimedia",
    "metadata": {},
    "outputs": [],
    "source": []
