--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "european-breeding",
+   "id": "sticky-leeds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "italic-hampshire",
+   "id": "comfortable-waterproof",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "organized-affair",
+   "id": "material-creek",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "accessible-packaging",
+   "id": "seeing-location",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dying-bishop",
+   "id": "bacterial-weekly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "pacific-greeting",
+   "id": "manual-audit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "accessible-estate",
+   "id": "verified-death",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "military-adrian",
+   "id": "dutch-latitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "reduced-alaska",
+   "id": "stuck-robin",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "mediterranean-monday",
+   "id": "toxic-plumbing",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "quantitative-vocabulary",
+   "id": "spoken-maintenance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "jewish-bonus",
+   "id": "federal-strand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "adolescent-mailing",
+   "id": "broke-mercury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "framed-pointer",
+   "id": "future-couple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "demonstrated-wrestling",
+   "id": "saving-barrier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "phantom-counter",
+   "id": "impressive-tomorrow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "charged-lighter",
+   "id": "complicated-excuse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "extended-evening",
+   "id": "lyric-oklahoma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "twenty-stranger",
+   "id": "matched-there",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "declared-occupation",
+   "id": "computational-provider",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "bottom-citizen",
+   "id": "multiple-arkansas",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "promising-solomon",
+   "id": "preliminary-programmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "arranged-independence",
+   "id": "knowing-retirement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "preceding-testimony",
+   "id": "liberal-theorem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "rubber-oxford",
+   "id": "impaired-paraguay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "numeric-cancer",
+   "id": "favorite-reward",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "organic-butterfly",
+   "id": "similar-pittsburgh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "cleared-resort",
+   "id": "technological-comedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "surgical-billy",
+   "id": "competitive-homeless",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "secret-improvement",
+   "id": "surface-childhood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "other-japan",
+   "id": "current-spank",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "welsh-attribute",
+   "id": "refined-modern",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "insured-diploma",
+   "id": "oriental-correlation",
    "metadata": {},
    "outputs": [
     {
@@ -488,8 +488,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "id": "competitive-collector",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "diverse-marketplace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del a[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "coordinate-custody",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-multimedia",
+   "id": "cardiac-router",
    "metadata": {},
    "outputs": [],
    "source": []
