--- a/search-demo.ipynb
+++ b/search-demo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "pleased-flour",
+   "id": "revolutionary-avatar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "going-basement",
+   "id": "great-filter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "stopped-sleeve",
+   "id": "younger-hydrogen",
    "metadata": {},
    "outputs": [
     {
@@ -48,201 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "pleasant-breach",
+   "execution_count": null,
+   "id": "genetic-hollow",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>url</th>\n",
-       "      <th>title</th>\n",
-       "      <th>description</th>\n",
-       "      <th>terms</th>\n",
-       "      <th>cosine</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3561</th>\n",
-       "      <td>https://vel.life/tags/%E5%B9%BB%E6%83%B3%E5%AD...</td>\n",
-       "      <td>Tag: 幻想学 | 思维之海</td>\n",
-       "      <td>Never stop thinking.</td>\n",
-       "      <td>['Tag', ':', '幻想', '学', '|', '思维', '之', '海', '...</td>\n",
-       "      <td>0.224456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3509</th>\n",
-       "      <td>https://vel.life/categories/index.html</td>\n",
-       "      <td>初等幻想 | 思维之海\\n</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['初等', '幻想', '|', '思维', '之', '海', '思维', '之', '...</td>\n",
-       "      <td>0.188624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3453</th>\n",
-       "      <td>https://vel.life/%E8%BD%AF%E4%BB%B6%E7%90%86%E...</td>\n",
-       "      <td>软件理论基础 | 思维之海</td>\n",
-       "      <td>相关文章论学习方法区块链课程实验因果推断正则表达式密码学</td>\n",
-       "      <td>['软件', '理论', '基础', '|', '思维', '之', '海', '相关', ...</td>\n",
-       "      <td>0.157497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3567</th>\n",
-       "      <td>https://vel.life/tags/%E6%95%B0%E5%AD%A6/</td>\n",
-       "      <td>Tag: 数学 | 思维之海</td>\n",
-       "      <td>Never stop thinking.</td>\n",
-       "      <td>['Tag', ':', '数学', '|', '思维', '之', '海', 'Never...</td>\n",
-       "      <td>0.144560</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3485</th>\n",
-       "      <td>https://vel.life/%E9%9A%8F%E6%9C%BA%E6%95%B0%E...</td>\n",
-       "      <td>随机数算法 | 思维之海</td>\n",
-       "      <td>随机数算法。</td>\n",
-       "      <td>['随机', '数算', '法', '|', '思维', '之', '海', '随机', '...</td>\n",
-       "      <td>0.133912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>619</th>\n",
-       "      <td>https://blog.k8s.li/tags/kindle/</td>\n",
-       "      <td>标签: kindle | 木子</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['标签', ':', 'kindle', '|', '木子', 'kindle', '标签...</td>\n",
-       "      <td>-0.036548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>564</th>\n",
-       "      <td>https://blog.k8s.li/tags/%E6%80%9D%E8%80%83/</td>\n",
-       "      <td>标签: 思考 | 木子</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['标签', ':', '思考', '|', '木子', '思考', '标签', '2019...</td>\n",
-       "      <td>-0.037361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>591</th>\n",
-       "      <td>https://blog.k8s.li/tags/%E9%98%85%E8%AF%BB/</td>\n",
-       "      <td>标签: 阅读 | 木子</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['标签', ':', '阅读', '|', '木子', '阅读', '标签', '2020...</td>\n",
-       "      <td>-0.038947</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2706</th>\n",
-       "      <td>https://mabbs.github.io/kamimemo/kamimemo_04.html</td>\n",
-       "      <td>Kamisama no memochou 4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>['Kamisama', 'no', 'memochou', '4']</td>\n",
-       "      <td>-0.044042</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>470</th>\n",
-       "      <td>https://blog.k8s.li/booklist.html</td>\n",
-       "      <td>书单 | 木子\\n</td>\n",
-       "      <td>2021   书名 作者 start end 时长    生命是什么 【奥地利】埃尔温·薛定...</td>\n",
-       "      <td>['书单', '|', '木子', '2021', '书名', '作者', 'start',...</td>\n",
-       "      <td>-0.048016</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4011 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    url  \\\n",
-       "3561  https://vel.life/tags/%E5%B9%BB%E6%83%B3%E5%AD...   \n",
-       "3509             https://vel.life/categories/index.html   \n",
-       "3453  https://vel.life/%E8%BD%AF%E4%BB%B6%E7%90%86%E...   \n",
-       "3567          https://vel.life/tags/%E6%95%B0%E5%AD%A6/   \n",
-       "3485  https://vel.life/%E9%9A%8F%E6%9C%BA%E6%95%B0%E...   \n",
-       "...                                                 ...   \n",
-       "619                    https://blog.k8s.li/tags/kindle/   \n",
-       "564        https://blog.k8s.li/tags/%E6%80%9D%E8%80%83/   \n",
-       "591        https://blog.k8s.li/tags/%E9%98%85%E8%AF%BB/   \n",
-       "2706  https://mabbs.github.io/kamimemo/kamimemo_04.html   \n",
-       "470                   https://blog.k8s.li/booklist.html   \n",
-       "\n",
-       "                       title  \\\n",
-       "3561         Tag: 幻想学 | 思维之海   \n",
-       "3509           初等幻想 | 思维之海\\n   \n",
-       "3453           软件理论基础 | 思维之海   \n",
-       "3567          Tag: 数学 | 思维之海   \n",
-       "3485            随机数算法 | 思维之海   \n",
-       "...                      ...   \n",
-       "619          标签: kindle | 木子   \n",
-       "564              标签: 思考 | 木子   \n",
-       "591              标签: 阅读 | 木子   \n",
-       "2706  Kamisama no memochou 4   \n",
-       "470              书单 | 木子\\n     \n",
-       "\n",
-       "                                            description  \\\n",
-       "3561                               Never stop thinking.   \n",
-       "3509                                                NaN   \n",
-       "3453                       相关文章论学习方法区块链课程实验因果推断正则表达式密码学   \n",
-       "3567                               Never stop thinking.   \n",
-       "3485                                             随机数算法。   \n",
-       "...                                                 ...   \n",
-       "619                                                 NaN   \n",
-       "564                                                 NaN   \n",
-       "591                                                 NaN   \n",
-       "2706                                                NaN   \n",
-       "470   2021   书名 作者 start end 时长    生命是什么 【奥地利】埃尔温·薛定...   \n",
-       "\n",
-       "                                                  terms    cosine  \n",
-       "3561  ['Tag', ':', '幻想', '学', '|', '思维', '之', '海', '...  0.224456  \n",
-       "3509  ['初等', '幻想', '|', '思维', '之', '海', '思维', '之', '...  0.188624  \n",
-       "3453  ['软件', '理论', '基础', '|', '思维', '之', '海', '相关', ...  0.157497  \n",
-       "3567  ['Tag', ':', '数学', '|', '思维', '之', '海', 'Never...  0.144560  \n",
-       "3485  ['随机', '数算', '法', '|', '思维', '之', '海', '随机', '...  0.133912  \n",
-       "...                                                 ...       ...  \n",
-       "619   ['标签', ':', 'kindle', '|', '木子', 'kindle', '标签... -0.036548  \n",
-       "564   ['标签', ':', '思考', '|', '木子', '思考', '标签', '2019... -0.037361  \n",
-       "591   ['标签', ':', '阅读', '|', '木子', '阅读', '标签', '2020... -0.038947  \n",
-       "2706                ['Kamisama', 'no', 'memochou', '4'] -0.044042  \n",
-       "470   ['书单', '|', '木子', '2021', '书名', '作者', 'start',... -0.048016  \n",
-       "\n",
-       "[4011 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "searcher.search('机器学习 数据挖掘')"
+    "# searcher.search('机器学习 数据挖掘')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banner-queue",
+   "id": "mediterranean-combat",
    "metadata": {},
    "outputs": [],
    "source": []
