--- a/build-searcher-demo.ipynb
+++ b/build-searcher-demo.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "handled-enzyme",
+   "execution_count": 1,
+   "id": "ahead-elder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "acting-heath",
+   "id": "organic-demonstration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "logical-assessment",
+   "id": "august-procedure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "spoken-template",
+   "id": "pointed-vocabulary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "interstate-bonus",
+   "id": "voluntary-brief",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,19 +77,21 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "matched-senator",
+   "id": "enabling-academy",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_webpages = []\n",
     "for x in cursor1:\n",
+    "    if x['description'] == '':\n",
+    "        x['description'] = ' '\n",
     "    all_webpages.append(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "auburn-bulgarian",
+   "id": "invisible-playlist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "outstanding-terrorism",
+   "id": "departmental-range",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "lined-handy",
+   "id": "voluntary-apache",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,14 +132,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "spread-separate",
+   "id": "substantial-shade",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4011/4011 [00:02<00:00, 1407.94it/s]\n"
+      "100%|██████████| 4011/4011 [00:02<00:00, 1656.23it/s]\n"
      ]
     }
    ],
@@ -159,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "floral-prince",
+   "id": "cathedral-conservation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "informational-field",
+   "id": "proved-heather",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fabulous-thompson",
+   "id": "affiliated-princeton",
    "metadata": {},
    "outputs": [
     {
@@ -199,20 +201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "precious-viewer",
+   "execution_count": 14,
+   "id": "novel-diary",
    "metadata": {},
    "outputs": [],
    "source": [
     "k = min(term_document_matrix.shape) - 1\n",
-    "k = 50\n",
+    "k = 500\n",
     "u, sigma, vh = svds(term_document_matrix, k=k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "accurate-nickel",
+   "execution_count": 15,
+   "id": "foreign-satellite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,8 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "parental-vampire",
+   "execution_count": 16,
+   "id": "inner-frank",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "cooperative-cemetery",
+   "execution_count": 19,
+   "id": "nervous-annex",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,20 +244,20 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "amber-naples",
+   "id": "downtown-maine",
    "metadata": {},
    "outputs": [],
    "source": [
     "# svd_filename = 'searcher_svds.npz'\n",
     "# vocabulary_filename = 'vocabulary.gz'\n",
     "# web_table_filename = 'web.csv'\n",
-    "# searcher.save(svd_filename, vocabulary_filename, web_table_filename)"
+    "# searcher.dump(svd_filename, vocabulary_filename, web_table_filename)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adapted-qualification",
+   "id": "excess-visiting",
    "metadata": {},
    "outputs": [],
    "source": []
